# mkdebcontrol

./: .gitignore  ChangeLog  DwmDebArgumentIO.hh  DwmDebArguments.hh  DwmDebControl.hh  DwmDebControlLexer.lex  DwmDebControlParser.y  DwmDebPkgDepend.cc  DwmDebPkgDepend.hh  DwmDebPkgVersion.cc  DwmDebPkgVersion.hh  DwmDebTupleHelpers.hh  DwmDebVersionString.cc  DwmDebVersionString.hh  Makefile  Makefile.vars.in  README.md  configure  configure.ac  debcontrol.in  dwm.m4  mkdebcontrol.1  mkdebcontrol.cc
